<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/profile_page_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp" >

        <ImageButton
            android:id="@+id/profile_page_button_backToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:elevation="1pt"
            android:focusable="true"
            android:minHeight="48dp"
            android:src="@drawable/ic_profile_page_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/profile_page_button_backToList_description" />

        <ImageView
            android:id="@+id/profile_page_avatar_banner"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/profile_page_avatar_banner_description" />

        <TextView
            android:id="@+id/profile_page_title_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/profile_page_button_backToList"
            app:layout_constraintBottom_toTopOf="@+id/profile_page_button_addToFav"
            android:text="@string/profile_page_links_title"
            android:contentDescription="@string/profile_page_title_banner_description"
            style="@style/profile_page_banner_title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_page_button_addToFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/profile_page_avatar_banner"
            app:layout_constraintEnd_toEndOf="@+id/profile_page_links"
            app:layout_constraintTop_toBottomOf="@+id/profile_page_avatar_banner"
            app:srcCompat="@drawable/ic_star_white_24dp"
            android:contentDescription="@string/profile_page_button_addToFav_description" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_page_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/profile_page_avatar_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:background="@color/white"
            card_view:cardUseCompatPadding="true" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/profile_page_links_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/profile_page_links_title"
                    style="@style/profile_page_titles" />

                <TextView
                    android:id="@+id/profile_page_links_postalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/profile_page_links_padding"
                    android:gravity="center_vertical"
                    android:padding="@dimen/profile_page_links_padding"
                    app:layout_constraintTop_toBottomOf="@+id/profile_page_links_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:drawableStartCompat="@drawable/ic_profile_page_postaladdress"
                    android:text="@string/profile_page_links_postalAddress" />

                <TextView
                    android:id="@+id/profile_page_links_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/profile_page_links_padding"
                    android:gravity="center_vertical"
                    android:padding="@dimen/profile_page_links_padding"
                    app:layout_constraintTop_toBottomOf="@+id/profile_page_links_postalAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:drawableStartCompat="@drawable/ic_profile_page_phonenumber"
                    android:text="@string/profile_page_links_phoneNumber" />

                <TextView
                    android:id="@+id/profile_page_links_socialWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/profile_page_links_padding"
                    android:gravity="center_vertical"
                    android:padding="@dimen/profile_page_links_padding"
                    app:layout_constraintTop_toBottomOf="@+id/profile_page_links_phoneNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:drawableStartCompat="@drawable/ic_profile_page_socialwebsite"
                    android:text="@string/profile_page_links_socialWebsite" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/profile_page_links"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:background="@color/white"
            card_view:cardUseCompatPadding="true" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/profile_page_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/profile_page_description_title"
                    style="@style/profile_page_titles" />

                <TextView
                    android:id="@+id/profile_page_description_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/profile_page_description_content_vertical_padding"
                    android:paddingStart="@dimen/text_margin"
                    android:paddingEnd="@dimen/text_margin"
                    android:paddingBottom="@dimen/profile_page_description_content_vertical_padding"
                    app:layout_constraintTop_toBottomOf="@+id/profile_page_description_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/profile_page_description_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>